--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
 
     <footer>
-        <p>Copyright &copy; 2017 Ezequiel G. All rights reserved. <a href="http://freecodecamp/zeku87">Get in touch and let's build something great</a></p>
+        <p>Copyright &copy; 2017 Ezequiel G. All rights reserved. <a target="_blank" href="http://freecodecamp.com/zeku87">Get in touch and let's build something great</a></p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
