Large-hero section is done

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <img src="assets/images/icons/clear-view-escapes.svg">
-        <a href="#">Paradise Travels</a>
+        <a class="button" href="#">Get in touch now!</a>
         <nav>
             <ul>
                 <li><a href="#our-beginning">Our Beginning</a></li>
@@ -23,10 +23,12 @@
 
     <div class="large-hero container">
         <img src="assets/images/hero--large.jpg">
-        <h1>Your clarity.</h1>
-        <h2>One trip away.</h2>
-        <p>We create soul restoring journeys that inspire you to be you.</p>
-        <p><a href="#">Get Started Today</a></p>
+        <div class="large-hero__text-content">
+            <h1 class="large-hero__title">Your clarity.</h1>
+            <h2 class="large-hero__subtitle">One trip away.</h2>
+            <p class="large-hero__detail">We create soul restoring journeys that inspire you to be you.</p>
+            <p><a class="button button__orange" href="#">Get Started Today</a></p>
+        </div>
     </div>
 
     <div id="our-beginning" class="container">
@@ -82,7 +84,7 @@
     </div>
 
     <footer>
-        <p>Copyright &copy; 2017 Ezequiel G. All rights reserved. <a target="_blank" href="http://freecodecamp.com/zeku87">Get in touch and let's build something great</a></p>
+        <p>Copyright &copy; 2018 Ezequiel G. All rights reserved. <a class="button" target="_blank" href="http://ezequielgallardo.com">Get in touch and let's build something great</a></p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
