--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,18 @@
     </header>
 
     <div class="large-hero container">
-        <img src="assets/images/hero--large.jpg">
+        
+        <picture>
+            <source srcset="assets/images/hero--large.jpg 1920w,
+                            assets/images/hero--large-hi-dpi.jpg 3840w" media="(min-width:1200px)">
+            <source srcset="assets/images/hero--medium.jpg 1380w,
+                            assets/images/hero--medium-hi-dpi.jpg 2760w" media="(min-width:800px)">
+            <source srcset="assets/images/hero--small.jpg 990w,
+                            assets/images/hero--small-hi-dpi.jpg 1980w" media="(min-width:520px)">
+            <img srcset="assets/images/hero--smaller.jpg 640w,
+                         assets/images/hero--smaller-hi-dpi.jpg 1280w" alt="Coastal view of ocean and mountains">
+        </picture>
+
         <div class="large-hero__text-content">
             <h1 class="large-hero__title">Your clarity.</h1>
             <h2 class="large-hero__subtitle">One trip away.</h2>
@@ -34,8 +45,22 @@
     <div id="our-beginning" class="container">
         <h2>The first trip we planned was our own.</h2>
         <h3>Ever since, we&rsquo;ve been working to make travel better for everyone.</h3>
-        <img src="assets/images/first-trip.jpg" alt="Couple walking down a street.">
-        <img src="assets/images/our-start.jpg" alt="Our founder, Jane Doe">
+        
+        <img srcset="assets/images/first-trip-low-res.jpg 565w,
+                     assets/images/first-trip.jpg 976w,
+                     assets/images/first-trip-hi-dpi.jpg 1952w" 
+        alt="Couple walking down a street.">
+
+        <picture>
+            <source srcset="assets/images/our-start-portrait.jpg 382w,
+                            assets/images/our-start-portrait.jpg 764w" media="(min-width:1200px)">
+            <source srcset="assets/images/our-start.jpg 404w,
+                            assets/images/our-start-hi-dpi.jpg 808w" media="(min-width:800px)">
+            <source srcset="assets/images/our-start-landscape.jpg 800w,
+                            assets/images/our-start-landscape-hi-dpi.jpg 1600w" media="(min-width:520px)">
+            <img src="assets/images/our-start-landscape-small.jpg" alt="Our founder, Jane Doe">
+        </picture>
+
         <h2>Here&rsquo;s how we got started&hellip;</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <a href="#">quis nostrud exercitation</a> ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <p>Duis aute irure dolor in <strong>reprehenderit in</strong> voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -67,17 +92,20 @@
         <img src="assets/images/icons/comment.svg">
         <h2>Real Testimonials</h2>
 
-        <img src="assets/images/testimonial-jane.jpg">
+        <img srcset="assets/images/testimonial-jane.jpg 160w,
+                     assets/images/testimonial-jane-hi-dpi.jpg 320w">
         <h3>Jane Doe</h3>
         <h3>9 Time Escaper</h3>
         <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&rdquo;</p>
 
-        <img src="assets/images/testimonial-john.jpg">
+        <img srcset="assets/images/testimonial-john.jpg 160w,
+                     assets/images/testimonial-john-hi-dpi.jpg 320w">
         <h3>John Smith</h3>
         <h3>4 Time Escaper</h3>
         <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit aemet, consectetur.&rdquo;</p>
 
-        <img src="assets/images/testimonial-cat.jpg">
+        <img srcset="assets/images/testimonial-cat.jpg 160w,
+                     assets/images/testimonial-cat-hi-dpi.jpg 320w">
         <h3>Cat McKitty</h3>
         <h3>6 Time Escaper</h3>
         <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
@@ -87,6 +115,5 @@
         <p>Copyright &copy; 2018 Ezequiel G. All rights reserved. <a class="button" target="_blank" href="http://ezequielgallardo.com">Get in touch and let's build something great</a></p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
 </body>
 </html>
